where-to-travel/src/main/webapp/style.css
.active-card {
  box-shadow: 6px 12px 9px #888888;
  outline: 5px solid #FF5C0A;
  margin-bottom: 10px;
  margin-top: 10px;
  z-index: 500;
}

.bmd-drawer-f-l>.bmd-layout-drawer {
  height: 100%;
  left: 0;
  top: 0;
  transform: translateX(-0px);
  width: 360px;
}

body {
  color: #1E3C19;	
  height: 100%;
  margin: 0px;
  padding: 0px;
  transition: background-color 0.5s;
}

.btn-icon {
  margin-right: 15px
}

.btn-color {
  color: #049688;
}

.card-scroller {
  background-color: rgba(0, 0, 0, 0);
  height: 100%;
  left: 0;
  margin: 0;
  margin-top: 5px;
  max-width: 30%;
  min-width: 17%;
  overflow: scroll;
  padding: 5px;
  position: absolute;
  top: 0;
  z-index: 20;
}

#colon {
  font-size: 24px;
  padding-top: 10%;
}

.feedback {
  color: #D70D00;
}

#feedback-target {
  text-align: center;
}

.fg-mixin {
  margin: auto;
  width: 20%
}

.font-size-large {
  font-size: 1.3rem;
}

html {
  height: 100%;
}

h5 {
  margin-left: auto;
  margin-right: auto;
}

input:checked + .slider {
  background-color: #049688;
}

input:focus + .slider {
  box-shadow: 0 0 1px #049688;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

.icon {
  background:#fff;
  border-radius:50%;
  color:#aaa;
  cursor:pointer;
  display:inline-block;
  margin:0 0 15px;
  padding:10px 12px 8px;
  transition:.2s;
}

.icon:hover {
  color: #666;
}

.icon.press {
  color: #D70D00;
}

.info-header {
  color: #049688;
  text-align: left;
}

.location-card {
  margin: 10px;
}

#map {
  height: 100%;
  width: 100%;
  z-index: 1;
}

.multi-select-pill {
  background-color: white;
  border: 1px solid #049688;
  border-radius: 25px;
  color: #049688;
  cursor: pointer;
  display: inline-block;
  font-size: 1rem;
  margin: 5px;
  padding: 5px 10px 5px 10px;
  transition: box-shadow .2s cubic-bezier(.4,0,1,1),background-color .2s cubic-bezier(.4,0,.2,1),color .2s cubic-bezier(.4,0,.2,1)
}

.multi-select-pill:hover {
  background-color: #049688;
  border: 1px solid white;
  color: white;
}

#nav-text {
  margin-right: 10px;
  margin-left: 10px;
}

.no-break {
  margin: 0;
  padding: 0; 
}

:not(.bmd-drawer-out).bmd-drawer-in.bmd-drawer-f-l>.bmd-layout-content {
  background-color: whitesmoke;
  margin-left: 360px;
}

.over-card {
  bottom: 0;
  height: fit-content;
  left: 0;
  margin: auto;
  position: absolute;
  width: fit-content;
  right: 0;
  top: 0;
}

#search-btn-container {
  display: inline-block;
  margin-top: 5px;
  margin-right: auto;
  margin-left: auto;
}

.plus {
  outline: none;
  margin-left: 12px;  
}

.selected {
  background-color: #049688;
  color: white;
}

.slider {
  bottom: 0;
  background-color: #ccc;
  cursor: pointer;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before { 
  background-color: white;
  bottom: 4px;
  content: "";
  height: 26px;
  left: 4px;
  position: absolute;
  width: 26px;
  -webkit-transition: .4s;
  transition: .4s;
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.stars {
  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
  font-size: 0;
  height: 21px;
  line-height: 0;
  overflow: hidden;
  text-indent: -999em;
  width: 110px; 
}

.stars-rating {
    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
    background-position: 0 100%;
    float: left;
    height: 21px;
    display:block;
}  

.switch {
  display: inline-block;
  height: 34px;
  margin-right: 31px;
  position: relative;
  width: 60px;
}

/* Selects all inputs after .switches, removes default input styling*/
.switch input {
  height: 0; 
  opacity: 0;
  width: 0;
}

.text-center {
  text-align: center;
}

.text-color {
  color: #1E3C19;
}

@media screen and (max-width: 398px) {
  #drawer-toggle {
    color: #049688;
    font-size: 1em;
  }
  
  .navbar {
    font-size: 1em;
  }

  .btn-icon {
    margin: 0 3px 0 0;
    padding: 0;
  }

  #nav-text {
    margin-left: 4px;
    margin-right: 4px;
  }

  .btn-small-padding {
    padding: 5px 10px 5px 10px
  }

  .card-scroller {
    max-width: 55%;
    padding: 0;
  }
}

/*
 Give a little more screen space back for screens with width 398-500px
*/
@media screen and (max-width: 500px) {
  .card-scroller {
    max-width: 45%;
    padding: 0;
  }
}

